Fix banner height on mobile

--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ p {
 
 .cyber-dino-banner .cyber-big #cb-deco-big {
     position: relative;
-    top: 50px;
+    top: 80px;
     /* left: 10%; */
     /* mix-blend-mode:color-dodge; */
     mix-blend-mode: screen;
@@ -420,7 +420,7 @@ h1 {
     .cyber-dino-banner {
         position: relative;
         width: 100%;
-        height: 620px;
+        height: 670px;
 
     }
 
